--- a/css/common.css
+++ b/css/common.css
@@ -63,7 +63,7 @@ header, nav, section, article, footer{display: block;}
 .clearfix:after{content: "";display: block;clear: both;}
 .blind{width: 1px;height: 1px;margin: -1px;overflow: hidden;border: 0;clip: rect(1px,1px,1px,1px);clip-path: inset(50%);}
 .bdbox{-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box;}
-.area{width: 1180px;margin: 0 auto;border: 1px solid red;}
+.area{width: 1180px;margin: 0 auto;}
 
 /* skip navigation */
 #skip a{position: absolute;top: 0;left: -9999px;z-index: 100;}
